Use html-webpack-plugin for all header information
This removes the need for the title and favicon tag in index.html. This
also makes copy-webpack-plugin unnecessary and removes it.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,11 +1,5 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Dino-Mail</title>
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-</head>
-<body>
-<div id="app" data-ui-view></div>
-</body>
+<head><meta charset="UTF-8"></head>
+<body><div id="app" data-ui-view></div></body>
 </html>
