Add directions to title page

--- a/slides/index.html
+++ b/slides/index.html
@@ -70,6 +70,12 @@ class: center, middle
 # Isolating and Improving performance in Angular 1 Applications
 ### Winning SPARS with Angular
 
+```
+git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
+cd ng-conf-2016-workshop
+npm install
+```
+
 .footnote[
   Taylor Everding
   .github[![Github](../slides/img/github.png)] Taylor1791
