Center slides by default

--- a/slides/index.html
+++ b/slides/index.html
@@ -13,6 +13,9 @@ h1, h2, h3 {
   margin-bottom: 0;
 }
 
+.remark-slide > div {
+  vertical-align: middle;
+}
 .remark-slide-content h1 { font-size: 3em; }
 .remark-slide-content h2 { font-size: 2em; }
 .remark-slide-content h3 { font-size: 1.6em; }
