--- a/slides/index.html
+++ b/slides/index.html
@@ -13,6 +13,10 @@ h1, h2, h3 {
   margin-bottom: 0;
 }
 
+.remark-slide > div.top {
+  vertical-align: top;
+}
+
 .remark-slide > div {
   vertical-align: middle;
 }
