Clean up dead code

--- a/slides/index.html
+++ b/slides/index.html
@@ -43,9 +43,6 @@ h1, h2, h3 {
   width: 755px;
 }
 
-.changelog > img {
-}
-
 .trackby > img {
   width: 755px;
 }
@@ -72,7 +69,7 @@ h1, h2, h3 {
   <body>
     <textarea id="source">
 
-class: center, middle
+class: center
 
 # Isolating and Improving performance in Angular 1 Applications
 ### Winning SPARS with Angular
