--- a/slides/index.html
+++ b/slides/index.html
@@ -67,6 +67,11 @@ h1, h2, h3 {
 .huge {
   font-size: 2.5em;
 }
+
+.workshop {
+  position: absolute;
+  bottom: 22px;
+}
     </style>
   </head>
   <body>
@@ -81,6 +86,7 @@ class: center
 git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
 cd ng-conf-2016-workshop
 npm install
+npm start
 ```
 
 .footnote[
@@ -90,15 +96,25 @@ npm install
 ]
 
 ???
+* Name
+* Title
+* Later Workshop
+* Follow Directions to set-up
 
-Raise your hand if you have worked on an angular 1 app.
+Questions:
+* Worked on A1 app?
+* Performance problems
+* Nervous?
 
-Keep your hand raised if you encountered front-end performance problems on an angular app?
+I was
+ - Internals
+ - where begin
 
-If you were at least a little nervous the first time you had to redress the problems.
+End
+ - won't be as scard
+ - more techniques
 
-I was, I hope to give you the tools to address the issues without feeling the fear that I had.
-
+4 things
 ---
 
 .left-column[
@@ -112,9 +128,10 @@ I was, I hope to give you the tools to address the issues without feeling the fe
 ]
 
 ???
-
-Give you tips and tricks that anyone developers of all skill levels can take home and put in their application with minimal effort.
-
+- tips
+- all skill levels
+- minimal effort
+- not covered later in the workshop, but worth mentioning
 ---
 
 .left-column[
@@ -129,11 +146,10 @@ Give you tips and tricks that anyone developers of all skill levels can take hom
 ]
 
 ???
-
-Angular is a powerful abstraction from JavaScript. But it is sill JavaScript.
-
-Everything we use debug performance in JavaScript still applies.
-
+* comfortable profiling
+* Powerful abstraction
+* angular is javascript
+* javascript is not angular
 ---
 
 .left-column[
@@ -149,11 +165,9 @@ Everything we use debug performance in JavaScript still applies.
 ]
 
 ???
-
-Later in workshop, identify and fix issues in a real application.
-
-After seeing examples of when performance arise, it makes it easier to identify future problems
-
+* Later, identify and fix
+* start to develop a mental model
+* identify and prevent
 ---
 
 .left-column[
@@ -170,18 +184,14 @@ After seeing examples of when performance arise, it makes it easier to identify 
 ]
 
 ???
-
-
-Constant thought about how code works at scale.
-
-The best way to fix performance issues, is to prevent them
-
-...
-
-Questions?
+* cannot achieve by self.
+* consider larger implication and scla.
+* No over engineering.
+* Development small data
+* We need to think.
+* developing attitude, you can fix them.
 
 Let's take care of the first goal
-
 ---
 
 ## Simple Tricks 1: Always upgrade angular
@@ -189,13 +199,11 @@ Let's take care of the first goal
 .fullImage[![Angular 1.5.5/1.5.1 Changelog](img/changelog.png)]
 
 ???
-
-Angular team works hard to make angular as fast as possible
-
-Document performance improvements of every release in the change log.
-
-May not understand, but you don't have too!
-
+* Angular hard work fast
+* Document in change log
+* example
+* No idea, don't have too
+* semver since 1.3
 ---
 
 ## Simple Tricks 2: Disable Debug Data
@@ -203,37 +211,38 @@ May not understand, but you don't have too!
 .fullImage[![Disable Debug Information](img/disable-debug.png)]
 
 ???
-
-Attaches information about scopes to DOM elements.
-
-Disable it!
-
-The minified angular disabled Debug info automatically
-
+* Attaches scope info, css classes
+* Tools SCOPE()!
+* Disable using $compileProvider
+* reloadWithDebugInfo
 ---
 
-## Simple Tricks 3: Bundle JavaScript
-
-.fullImage[![Too many JS files](img/many-js.png)]
-
-???
-
-Found in the wild
-
-Directives `template` and `templateUrl`
-
-Automatically add template cache or use `template`
-
----
-
-## Simple Tricks 4: Always use `track by`
+## Simple Tricks 3: Always use `track by`
 
 .fullImage[![track by](img/track-by.png)]
 
 ???
+* Most performance ng-repeat
+* track by is one of these things
+* avoid rebuilding DOM nodes 
+* track by must be unique
+* use $index
 
-Track by helps avoid angular rebuilding dom nodes when reordering
+Remaining are wild Anti-examples
+---
 
+## Simple Tricks 4: Bundle JavaScript
+
+.fullImage[![Too many JS files](img/many-js.png)]
+
+???
+* network tab
+* 164 script tags, SERIALLY
+* 16 sec 2MB.
+
+* Concatenate before deploy
+
+* TEMPLATE inlining or $templateCache
 ---
 
 ## Simple Tricks 5: Don't duplicate AJAX
@@ -241,124 +250,114 @@ Track by helps avoid angular rebuilding dom nodes when reordering
 .fullImage[![duplicate ajax](img/duplicate-ajax.png)]
 
 ???
+* 11 requests in 300 milliseconds
+* 2 different requests 5 times
+* I woud never
 
-It is really easy if ajax in watch or using `ng-repeat`
-Maybe easier to do this at the interceptor level or something like memoize.
-What is memoization?
+* Easy if watch or `ng-repeat`.
+* Fixes are pretty invasive
 
+* memozie pending promises
+* If a function returns a promise and the promise is still pending when the function is invoked a second time, retrun the original pending promise.
 ---
 
 ## Simple Tricks 6: Limit simultaneous AJAX
 
 .fullImage[![many ajax](img/many-ajax.png)]
 
+???
+* 23 Ajax
+* 6 Ajax per domain
+* cant rewrite
 ---
 
 ## Simple Tricks 6 (Cont)
 
 .fullImage[![aggregator](img/aggregator.png)]
 
+???
+* aggregator service
+* accepts a list of GET requests
+* cost of higher payload size
 ---
 
 ## Simple Tricks 7: Bocking the event loop
 
-.fullImage[![block event loop](img/block-event-loop.png)]
-
 .fullImage[![Watchers](img/watchers.png)]
 
 ???
+* Single threaded
+* click click
+* too many watchers, to complex
 
-Been on a website and click something, nothing happens, again. same. Then 3 happen?
-
-Sneak up on you when services return many results or client says how many.
-
+* 100 seconds
+* No acceptable even with dial-up
 ---
 
 .fullImage[![That's all](img/thats-all.gif)]
 
 ???
-
-You may feel like this.
-
-We have more.
+* You may feel like this.
+* Just the low-cost
+* We have more.
 
 Questions?
-
 ---
 
 .fullImage[![Blind](img/blind.gif)]
 
 ???
+* Long jump blind
+* Measure improvement from a users perpsective
+* Best baseline.
+* manual doesn't cut it.
+* 1 measurement, 1 machine, 1 point in time
 
-I have a question for you. Have you ever done a long jump blind?
-
-What its like to try to improve performance blind.
-
-Need to have some sort of base line.
-
-Manual timing doesn't cut it
- - one measurement
- - one machine
-
-Most analytics tools are not build for SPA.
-
+* significant impact on users.
+* Anaytics tool
+* Take gmail
 ---
 
 .fullImage[![Gmail](img/gmail.png)]
 
 ???
-
-Take gmail
-
-Are you confident that your analytics solution provides the time the users actually feels like th page is done?
-
-Let's assume you have a really good one and it works.
-
-What about route changes?
-
+* Take gmail
+* confident when user can interact
+* Let's assume you have a really good one and it works.
+* What about route changes?
 ---
 
 .fullImage[![Gmail Stars](img/gmail-starred.png)]
 
 ???
-
-Route Changes
-
-Controller instantiated and makes ajax request
-
-Route change complete
-
+* click link
+* route, controller, ajax
 ---
 
 .fullImage[![Gmail Stars](img/gmail-loading.png)]
 
 ???
-
-Does your analytics solution provide this?
-
-We built our own. On the drawing board.
-
+* see loading
+* anaytics "done" loading?
+* think solution
 ---
 
 .fullImage[![Timeline](img/stabilize.png)]
 
 ???
-
-Horizontal Axis is time
-
-Vertical Axis is depth of function calls (pretty much irrelevant)
-
-Does provide stack trace with function names.
-
+* profile complex
+* Horizontal Axis is time
+* Vertical Axis is depth of function calls
+* When is app done loading?
 ---
 
 .fullImage[![Timeline Stabilization](img/stabilize-point.png)]
 
 ???
-Digests: watcher
-AJAX: $httpInterceptros
-DOM Mutations: DOM Mutation Observers/DOM Mutation Events
-
+* everything that happens
+* Digests: watcher
+* AJAX: $httpInterceptros
+* DOM Mutations: DOM Mutation Observers/DOM Mutation Events
 ---
 
 class: center
@@ -370,127 +369,144 @@ class: center
 .fullImage[![Timeline Stabilization](img/stabilization-graph.png)]
 
 ???
-
-This is the top 8 visited pages on our site.
-
-Vertical axis is the time and horizontal axis is the date. Over a week.
-
-Which are the slowest, and by how much, most variation, and much more.
-
-Make decisions and where to spend time.
-
+* Amazing things
+* top 8 pages
+* week in november
+* veritcal axis is time 
+* Slowest, variation, statistics
+* Make decisions and where to spend time.
 ---
 
 .fullImage[![Performance Regression](img/perf-regression.png)]
 
 ???
-
-This was an extra ajax request.
-
-Allows us to see impact on real users, in near real time.
-
+* detect regressions
+* somewhere in the middle
+* Allows us to see impact on real users, in near real time.
+* This was an extra ajax request.
 ---
 
 .fullImage[![Awesom](img/dancing.gif)]
 
 ???
-
 Questions about RS or its purpose?
-
 ---
 
 .huge[
  > ".. about 97% of the time *premature optimization is the root of all evil*." - Donald Knuth
 ]
 
-???
-
-Changed my life
-
-Real world problem.
-
-YAGNI
-
----
-
-class: top
-
-## Performance Improvement Process
-
-&nbsp;
-
-.right-column[
-  ### 1) A real-world problem exists
-]
-
-???
-
-Some business don't benefit from improving performance. B2B.
-
-Make sure there is a business case for it.
-
-Users complaining, evidence to increase your sales
-
----
-
-class: top
-
-## Performance Improvement Process
-
-&nbsp;
-
-.right-column[
-  ### 1) A real-world problem exists
-  ### 2) Establish a base line
-]
-
-???
-
-Route stabalization
-
----
-class: top
-
-## Performance Improvement Process
-
-&nbsp;
-
-.right-column[
-  ### 1) A real-world problem exists
-  ### 2) Establish a base line
-  ### 3) Reduce the biggest contributer
-]
-
-???
-
-big stones -> biggest potential improvement
-
----
-class: top
-
-## Performance Improvement Process
-
-&nbsp;
-
-.right-column[
-  ### 1) A real-world problem exists
-  ### 2) Establish a base line
-  ### 3) Reduce the biggest contributer
-  ### 4) Measure and assess
-]
-
----
-
-# Workshop
-
+.workshop[
 ```
 git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
 cd ng-conf-2016-workshop
 npm install
+npm start
 ```
-
+]
 ???
+* Young, changed thoughts about development
+* Don't worry about micro-optimizations usually
+* Don't make a difference to the user
+---
 
+class: top
+
+## Performance Improvement Process
+
+&nbsp;
+
+.right-column[
+  ### 1) A real-world problem exists
+]
+
+.workshop[
+```
+git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
+cd ng-conf-2016-workshop
+npm install
+npm start
+```
+]
+???
+* Problem exists
+* Users complaining; increase sales
+* buisness case
+* depends on app
+---
+
+class: top
+
+## Performance Improvement Process
+
+&nbsp;
+
+.right-column[
+  ### 1) A real-world problem exists
+  ### 2) Establish a baseline
+]
+
+.workshop[
+```
+git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
+cd ng-conf-2016-workshop
+npm install
+npm start
+```
+]
+???
+* Route stabalization
+* Verify user impact
+---
+class: top
+
+## Performance Improvement Process
+
+&nbsp;
+
+.right-column[
+  ### 1) A real-world problem exists
+  ### 2) Establish a baseline
+  ### 3) Identify and improve the biggest bottleneck
+]
+
+.workshop[
+```
+git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
+cd ng-conf-2016-workshop
+npm install
+npm start
+```
+]
+???
+* biggest contributor; biggest room for improvement
+* 30% on 1ms vs 1sec
+---
+class: top
+
+## Performance Improvement Process
+
+&nbsp;
+
+.right-column[
+  ### 1) A real-world problem exists
+  ### 2) Establish a baseline
+  ### 3) Identify and improve the biggest bottleneck
+  ### 4) Measure and assess
+]
+
+.workshop[
+```
+git clone https://github.com/taylor1791/ng-conf-2016-workshop.git
+cd ng-conf-2016-workshop
+npm install
+npm start
+```
+]
+???
+* know good enough
+* diminishing returns
+* some point cost more
     </textarea>
 
     <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js"></script>
